--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.12.19",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "framer": "^2.4.1",
+    "framer-motion": "^12.23.26",
     "motion": "^12.23.26",
     "nodemailer": "^7.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "spline": "^0.0.0"
+    "spline": "^0.0.0",
+    "three": "^0.182.0",
+    "three-globe": "^2.45.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
