--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.12.19",
+    "@tabler/icons-react": "^3.36.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -23,11 +25,13 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "spline": "^0.0.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "three-globe": "^2.45.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
